repositioned the script tag

--- a/style.css
+++ b/style.css
@@ -880,7 +880,7 @@ button:active {
 }
 
 .orion {
-  font-family: "Inter","sans-serif";
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 32px;
